--- a/example/android/settings.gradle
+++ b/example/android/settings.gradle
@@ -1,6 +1,3 @@
 rootProject.name = 'example'
-
+apply from: file("../node_modules/@react-native-community/cli-platform-android/native_modules.gradle"); applyNativeModulesSettingsGradle(settings)
 include ':app'
-
-include ':react-native-shared-preferences', ':app'
-project(':react-native-shared-preferences').projectDir = new File(rootProject.projectDir, '../node_modules/react-native-shared-preferences/android')
