--- a/example/package.json
+++ b/example/package.json
@@ -3,11 +3,18 @@
   "version": "0.0.1",
   "private": true,
   "scripts": {
-    "start": "node node_modules/react-native/local-cli/cli.js start"
+    "android": "react-native run-android",
+    "start": "react-native start"
   },
   "dependencies": {
-    "react": "15.1.0",
-    "react-native": "^0.28.0",
-		"react-native-shared-preferences": "^0.0.6"
+    "react": "16.13.1",
+    "react-native": "0.63.2"
+  },
+  "devDependencies": {
+    "@babel/core": "^7.8.4",
+    "@babel/runtime": "^7.8.4",
+    "@types/react-native": "^0.63.2",
+    "metro-react-native-babel-preset": "^0.59.0",
+    "typescript": "^3.8.3"
   }
 }
