--- a/android/build.gradle
+++ b/android/build.gradle
@@ -17,10 +17,17 @@ android {
 dependencies {
     implementation fileTree(include: ['*.jar'], dir: 'libs')
     implementation "com.facebook.react:react-native:${safeExtGet('reactNativeVersion', '+')}"
-    implementation "org.jetbrains.kotlin:kotlin-stdlib:1.4.0"
+    implementation "org.jetbrains.kotlin:kotlin-stdlib:${safeExtGet('kotlin_version', '1.4.0')}"
     implementation "org.jetbrains.anko:anko-sdk21:0.10.8"
     implementation "androidx.core:core-ktx:1.3.1"
     implementation "com.squareup.retrofit2:retrofit:2.6.4"
     implementation "com.squareup.retrofit2:converter-gson:2.6.4"
     implementation 'com.squareup.okhttp3:logging-interceptor:3.12.12'
+}
+
+afterEvaluate {
+    generateReleaseBuildConfig.enabled = false
+    generateDebugBuildConfig.enabled = false
+    generateReleaseResValues.enabled = false
+    generateDebugResValues.enabled = false
 }
