--- a/build.gradle
+++ b/build.gradle
@@ -18,6 +18,10 @@ allprojects {
     repositories {
         google()
         jcenter()
+        maven {
+            // All of React Native (JS, Obj-C sources, Android binaries) is installed from npm
+            url("$rootDir/example/node_modules/react-native/android")
+        }
     }
 }
 
