--- a/package.json
+++ b/package.json
@@ -1,7 +1,9 @@
 {
   "name": "react-native-todorant-widget",
   "version": "0.0.1",
+  "description": "Todorant widget on Android",
   "main": "index.js",
+  "types": "index.d.ts",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
   },
