--- a/example/android/settings.gradle
+++ b/example/android/settings.gradle
@@ -1,3 +1,5 @@
 rootProject.name = 'TodorantWidget'
 apply from: file("../node_modules/@react-native-community/cli-platform-android/native_modules.gradle"); applyNativeModulesSettingsGradle(settings)
 include ':app'
+include ':react-native-shared-preferences'
+project(':react-native-shared-preferences').projectDir = new File(rootProject.projectDir, '../node_modules/react-native-shared-preferences/android')
