--- a/example/package.json
+++ b/example/package.json
@@ -8,7 +8,8 @@
   },
   "dependencies": {
     "react": "16.13.1",
-    "react-native": "0.63.2"
+    "react-native": "0.63.2",
+    "react-native-shared-preferences": "^1.0.2"
   },
   "devDependencies": {
     "@babel/core": "^7.8.4",
