--- a/example/android/app/build.gradle
+++ b/example/android/app/build.gradle
@@ -186,6 +186,7 @@ dependencies {
     //noinspection GradleDynamicVersion
     implementation "com.facebook.react:react-native:+"  // From node_modules
     implementation project(":react-native-shared-preferences")
+    implementation project(":react-native-todorant-widget")
 
     implementation "org.jetbrains.kotlin:kotlin-stdlib:1.3.72"
 
